--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -18,10 +18,10 @@
 [core]
   pager = less -x4
   editor = vim
-  excludesfile = ~/dotfiles/git/.gitignore_global
-  autocrlf = true
+	excludesfile = ~/dotfiles/git/.gitignore_global
+	autocrlf = input
 [init]
-  templatedir = ~/dotfiles/git/git_template
+	templatedir = ~/dotfiles/git/git_template
 [diff]
   tool = vimdiff
 [difftool]
