--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -19,7 +19,7 @@
   pager = less -x4
   editor = vim
   excludesfile = ~/dotfiles/git/.gitignore_global
-  autocrlf = true
+  autocrlf = input
 [init]
   templatedir = ~/dotfiles/git/git_template
 [diff]
