[tmux] update tmux bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,6 +32,8 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
 
 # splits
 bind s split-window -v
@@ -76,3 +78,10 @@ bind - \
   last-window \;\
   swap-pane -s tmux-zoom.0 \;\
   kill-window -t tmux-zoom
+
+# remove administrative debris (session name, hostname, time) in status bar
+# set -g status-left ''
+# set -g status-right ''
+
+# Local config
+if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
