[tmux] change footer line color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,7 +12,7 @@ set -g set-titles-string "#W"
 # extra history (default 2000)
 set -g history-limit 50000
 set -g default-terminal "screen-256color"
-set-option -g status-bg blue
+set-option -g status-bg '#6D6475'
 
 set-window-option -g window-status-current-bg green
 set-window-option -g window-status-current-fg black
