[tmux] add reloading binding

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,6 +79,9 @@ bind - \
   swap-pane -s tmux-zoom.0 \;\
   kill-window -t tmux-zoom
 
+# Reload this file
+bind-key R source-file ~/.tmux.conf \; display-message "source-file done"
+
 # remove administrative debris (session name, hostname, time) in status bar
 # set -g status-left ''
 # set -g status-right ''
