[tmux] update tmux bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,7 +80,9 @@ bind - \
   kill-window -t tmux-zoom
 
 # Reload this file
-bind-key R source-file ~/.tmux.conf \; display-message "source-file done"
+bind-key R \
+  source-file ~/.tmux.conf \;\
+  display-message "source-file reloaded"
 
 # remove administrative debris (session name, hostname, time) in status bar
 # set -g status-left ''
