[tmux]: bump tmux verstion v2.0 -> v2.1, update config with respect to mouse mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,25 +46,16 @@ bind-key C-u copy-mode -u
 # Scrolling with Shift-PageUp/Shift-PageDown.
 set -g terminal-overrides "*rxvt*:smcup@:rmcup@"
 
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set -g mouse on
 
 # Toggle mouse on with ^E m
 bind m \
-  set -g mode-mouse on \;\
-  set -g mouse-resize-pane on \;\
-  set -g mouse-select-pane on \;\
-  set -g mouse-select-window on \;\
+  set -g mouse on \;\
   display 'Mouse: ON'
 
 # Toggle mouse off with ^E M
 bind M \
-  set -g mode-mouse off \;\
-  set -g mouse-resize-pane off \;\
-  set -g mouse-select-pane off \;\
-  set -g mouse-select-window off \;\
+  set -g mouse off \;\
   display 'Mouse: OFF'
 
 # Reload this file
