[tmux] v2.1 Mouse scroll fix

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,6 +47,7 @@ bind-key C-u copy-mode -u
 set -g terminal-overrides "*rxvt*:smcup@:rmcup@"
 
 set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
 # Toggle mouse on with ^E m
 bind m \
