[tmux] speed up page scrolling

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,7 +47,10 @@ bind-key C-u copy-mode -u
 set -g terminal-overrides "*rxvt*:smcup@:rmcup@"
 
 set -g mouse on
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+bind -t vi-copy WheelUpPane halfpage-up
+bind -t vi-copy WheelDownPane halfpage-down
 
 # Toggle mouse on with ^E m
 bind m \
