add i3 configs in dotfiles

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ vim/bundle/*
 zsh/.cache
 zsh/gtk*
 zsh/libre*
+zsh/google-chrome*
+zsh/gtk*
+zsh/htop*
+zsh/ibus*
+zsh/KDE*
+zsh/Atlassian*
+zsh/ranger*
