[vim] update vundle configs, change vundle repo and update syntax

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -73,4 +73,4 @@ bind-key R \
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
-set-option -g default-shell /bin/zsh
+set-option -g default-shell /usr/local/bin/zsh
