--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,6 +67,22 @@ bind-key R \
   source-file ~/.tmux.conf \;\
   display-message "source-file reloaded"
 
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# # Setup 'v' to begin selection as in Vim
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# # Update default binding of `Enter` to also use copy-pipe
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -Tcopy-mode-vi Escape send -X cancel
+bind-key -Tcopy-mode-vi V send -X rectangle-toggle
+
 # remove administrative debris (session name, hostname, time) in status bar
 # set -g status-left ''
 # set -g status-right ''
